--- a/ASPCRUDProject/Views/Account/Login.cshtml
+++ b/ASPCRUDProject/Views/Account/Login.cshtml
@@ -1,63 +1,72 @@
 ﻿@using CRUDTEST.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Se connecter";
+    ViewBag.Title = "Login";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Utilisez un compte local pour vous connecter.</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
+@section head{
+    <style type="text/css">
+        body {
+            background-image: url('/Images/screen.png');
+            margin: 0;
+            background-size: cover;
+            color: white;
+        }
+    </style>
+}
+<h1 class="text-center">@ViewBag.Title</h1>
+<center>
+    <div class="row form ">
+        <div class="col">
+            <section id="loginForm" class="text-center">
+                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <h4>Utilisez un compte local pour vous connecter.</h4>
+                    <hr />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <center>
+                        <div class="form-group form-control-lg">
+                            @Html.LabelFor(m => m.Email, new { @class = "col-2 " })
+                            <div class="col-12">
+                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group form-control-lg">
+                            @Html.LabelFor(m => m.Password, new { @class = "col-2 " })
+                            <div class="col-12">
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </center>
+                    <div class="form-group form-control-lg">
+                        <div class="col">
+                            <div class="checkbox">
+                                @Html.CheckBoxFor(m => m.RememberMe)
+                                @Html.LabelFor(m => m.RememberMe)
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Se connecter" class="btn btn-default" />
+                    <div class="form-group">
+                        <div class="col">
+                            <input type="submit" value="Login" class="btn btn-info" />
+                        </div>
                     </div>
-                </div>
-                <p>
-                    @Html.ActionLink("Inscrire comme nouvel utilisateur", "Register")
-                </p>
-                @* Activez ceci une fois que vous avez activé la confirmation du compte pour la fonctionnalité de réinitialisation du mot de passe
-                    <p>
-                        @Html.ActionLink("Vous avez oublié votre mot de passe ?", "ForgotPassword")
-                    </p>*@
-            }
-        </section>
+                    <p style="color: white">
+                        @Html.ActionLink("Inscrire comme nouvel utilisateur", "Register")
+                    </p>
+                    @* Activez ceci une fois que vous avez activé la confirmation du compte pour la fonctionnalité de réinitialisation du mot de passe
+                        <p>
+                            @Html.ActionLink("Vous avez oublié votre mot de passe ?", "ForgotPassword")
+                        </p>*@
+                }
+            </section>
+        </div>
     </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
-</div>
+</center>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+
+
+
